# GDStream

./: .gitmodules  CMakeLists.txt  README.md  about.md  changelog.md  mod.json  support.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATES/: bug-report.yml
.github/workflows/: multi-platform-new.yml  multi-platform.yml
include/: dashauth.hpp
include/GDAddons/: GDAddons.hpp  Popup.hpp
include/GDStreamAPI/: Popup.hpp
src/: PlayLayer.cpp  StreamLayer.cpp  main.cpp
src/chatbox/: ChatLayer.cpp  ChatMessage.cpp  ChatMessage.hpp
src/hooks/: CreatorLayer.cpp  Geode.cpp  MenuLayer.cpp
src/layers/: StreamCreatorLayer.cpp  StreamCreatorLayer.hpp  StreamLayer.cpp  StreamLayer.hpp
src/layers/chatbox/: ChatLayer.hpp  ChatMessage.cpp  ChatMessage.hpp
src/layers/chatbutton/: ChatButton.cpp  ChatButton.hpp
src/server/: RTMPManager.cpp  RTMPManager.hpp  Stream.cpp  Stream.hpp  config.hpp
svgs/: readme.txt
